# CHIP8_EMU

./: CMakeLists.txt  README.md
include/: chip8.hpp
src/: chip8.cpp  main.cpp
